<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@null"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="#ddd6c6">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/sw_60dp"
        android:contentDescription="@null"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/start_game"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/sw_30dp"
        android:text="@string/start_game" />

    <Button
        android:id="@+id/diy_game"
        style="@style/ButtonStyle"
        android:text="@string/diy_game" />

    <Button
        android:id="@+id/leader_board"
        style="@style/ButtonStyle"
        android:text="@string/leader_board" />

    <Button
        android:id="@+id/setting"
        style="@style/ButtonStyle"
        android:text="@string/setting" />

    <Button
        android:id="@+id/author"
        style="@style/ButtonStyle"
        android:text="@string/author" />

    <Button
        android:id="@+id/exit"
        style="@style/ButtonStyle"
        android:text="@string/exit_game" />
</LinearLayout>