<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/circle_round_angle_bg_shape"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sw_20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/sw_20dp"
            android:paddingBottom="@dimen/sw_20dp"
            android:text="@string/using_help"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_raiders"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/sw_20dp"
            android:paddingBottom="@dimen/sw_20dp"
            android:text="@string/level_chart"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>